<resources>
    <string name="app_name">HomeJamesWIL</string>
    <string name="home">Home</string>
    <string name="trips">Trips</string>
    <string name="account">Account</string>
    <string name="driver_details">Driver Details</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="rating">Rating</string>
    <string name="phone_number">Phone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trip_information">Trip Information</string>
    <string name="request_trip">Request Trip</string>
    <string name="pick_up_time">Pick Up Time</string>
    <string name="date_of_pickup">Date Of Pickup</string>
    <string name="personal_details">Personal Details</string>
    <string name="request_a_trip">Request a Trip</string>
    <string name="title_activity_driver_maps">DriverMaps</string>
    <string name="accept_trip">Accept Trip</string>
    <string name="distance">Distance</string>
    <string name="register">Register</string>
    <string name="total_trip_time">Total Trip Time</string>
    <string name="customer_address">Customer Address</string>
    <string name="trip_time">Trip Time</string>
    <string name="rides">Rides</string>
    <string name="active_drivers">Active Drivers</string>
    <string name="address">Address</string>
    <string name="suburb">Suburb</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="id_number">ID Number</string>
    <string name="save">Save</string>
    <string name="edit_personal_details">Edit Personal Details</string>
    <string name="edit">Edit</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_home_maps">HomeMaps</string>
    <string name="trip_times">Trip Times</string>
    <string name="driver_name">Driver Name</string>
    <string name="drivers">Drivers</string>
    <string name="complaints">Complaints</string>
    <string name="report_driver">Report Driver</string>
    <string name="reason">Reason</string>
    <string name="any_other_information">Any Other Information</string>
    <string name="customer_dropped_off">Customer Dropped Off?</string>
    <string name="dropped_customer">Dropped Customer</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_plate">Vehicle Plate</string>
    <string name="previous_trips">Previous Trips</string>

    <string name="MAPS_API_KEY">AIzaSyANNxd0f6zOf_VvWwI-B3bY0rOblhUW410</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="dropoff_time">Dropoff Time</string>
    <string name="previous_trip">Previous Trip</string>
    <string name="report">Report</string>
    <string name="editDriver">Edit</string>
    <string name="Vehicle_Number_Plate" />
    <string name="car_type">Car Type</string>
    <string name="car_colour">Car Colour</string>
    <string name="vehicle_number_plate">Vehicle Number Plate</string>
    <string name="edit_details">Edit Details</string>
    <string name="export">Export</string>
    <string name="registerDriver">Register</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="available_orders">Available Orders</string>

</resources>