<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetTrip"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="5dp">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_information"
                    android:id="@+id/TripInfo"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">
                <TextView
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:id="@+id/DistanceOfPlaceTitle"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_trip_time"
                    android:id="@+id/TimeOfArrivalTitle"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">
                <TextView
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/Lat"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/Long"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:padding="10dp"
        android:focusable="true"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btnTrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:text="@string/accept_trip"
            android:backgroundTint="#fd8d3c"
            android:textColor="@color/white"
            android:textSize="15sp"/>

    </LinearLayout>

</LinearLayout>