<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    app:cardCornerRadius="15dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="5dp"
    card_view:cardCornerRAdius="5dp"
    android:backgroundTint="@color/homeJames">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:padding="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:padding="3dp"
                android:src="@drawable/clock"
                android:layout_width="35dp"
                android:layout_height="35dp"/>
            <TextView
                android:text="@string/trip_times"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="Date"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_gravity="center|end"
                android:gravity="end"
                android:layout_marginEnd="10dp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:padding="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/pickup_time"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:id="@+id/TripTimes"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:padding="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/dropoff_time"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:id="@+id/TripTimesDropOff"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>